fix spacing on jumbtron

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -121,6 +121,7 @@ body {
 @media only screen and (max-width: 700px) {
   .jumbotron {
     margin-bottom: 0px;
+    padding: 1em;
   }
   .jumbotron h1 {
     font-size: 40px;
@@ -132,7 +133,8 @@ body {
 @media only screen and (max-width: 500px) {
   .jumbotron {
     margin-bottom: -20px;
-    height: 150px;
+    /* height: 150px; */
+    =
   }
   .jumbotron h1 {
     font-size: 30px;
